--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/styles/column-layout.css">
     <link rel="stylesheet" href="/static/styles/form.css">
     <link rel="stylesheet" href="/static/styles/btn-group.css">
     <link rel="stylesheet" href="/static/styles/custom-select.css">
     <link rel="stylesheet" href="/static/styles/responsive-nav-bar.css">
-    <title>PLACEHOLDER</title>
+    <title>Betabiš</title>
     <style>
         body{
             padding: 0;
