meme banner added, text edited

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -28,37 +28,26 @@
 
             <br><hr><br><br>
 
-            <button type="button" class="collapsible"><strong>Jak tohle celé vzniklo?</strong></button>
+            <button type="button" class="collapsible"><strong>Proč pan Babiš neví nic o panu Pavlovi?</strong></button>
             <div class="collapsible-content">
-              <p>Původní nápad na stránku přes QR kódy vznikl na jaře 2022. V tu chvíli se tehdejší 8.A rozhodla propagovat svůj maturitní ples přes QR kódy a my jsme si řekli, že si uděláme vlastní. Začalo to tím, že jsme tam měli jenom pár obrázků, každopádně později jsme tam přidali i různé jednoduché hry. Původní projekt s QR kódy skončil s koncem školního roku.</p>
-              <p>Posuneme se o pár měsíců dopředu, na konec srpna 2022. V tu chvíli se začalo řešit Vítání nováčků a nás napadlo, že by bylo super, kdyby mezi sebou třídy soutežily celé září. A aby bylo jednoduché sledovat, jak si na tom třídy vedou, vytvořili jsme tuto stránku. Pořádaly se tady různorodé aktivity pro nové studenty gymnázia, za které následně třídy sbíraly body. Více informací o vítání si můžeš přečíst v archivu.</p>
-              <p>Když bylo Vítání nováčků u konce, přišla nám škoda tuhle stránku nevyužít. Chtěli jsme vymyslet něco pro všechny, od primánů až po maturanty. Něco, kde se bude moct zapojit každý. A tak vznikl GYMPlace, plátno pro všechny, kde si každý může nakreslit co chce, kdy chce, a všichni to uvidí. </p>
-            </div> 
-
-            <button type="button" class="collapsible"><strong>Kdo za tím stojí?</strong></button>
-            <div class="collapsible-content">
-              <p>Nejspíš není žádným tajemstvím, že celý projekt mají na svědomí studenti z maturitních ročníků. Stránku samu o sobě spravuje jeden člověk, s pomocí skupinky nadšenců, kteří mají na starosti, co se na stránce vlastně bude dít.</p>
-            </div> 
+              <p>Výroky našeho pana Babiše jsou založeny na machine learning modelu GPT-3 od OpenAI, který byl trénován na datech z let 2019 - 2021. Proto není schopen komentovat nedávné události.</p>
+            </div>
 
             <button type="button" class="collapsible"><strong>Jak to celé funguje?</strong></button>
             <div class="collapsible-content">
-              <p>Ve zkratce, jedná se o normální webovou stránku, QR kódy fungují pouze jako odkaz. Ti, které by zajímaly podrobnosti, se můžou podívat na GitHub, kde je veškerý zdrojový kód stránky i s jednoduchým popisem toho, jak to funguje.</p>
-              <a href="https://github.com/Ihavenolif/vitani-bazantu-server"><p>https://github.com/Ihavenolif/vitani-bazantu-server</p></a>
+              <p>Jedná se o jednoduchou webovou stránku, s pomocí OpenAI generujeme hlášky pana Babiše. Ti, které by zajímaly podrobnosti, se můžou podívat na GitHub, kde je veškerý zdrojový kód stránky.</p>
+              <a href="https://github.com/Ihavenolif/babis-gen"><p>https://github.com/Ihavenolif/babis-gen</p></a>
             </div> 
 
-            <button type="button" class="collapsible"><strong>Myslíte, že z toho můžete mít problém?</strong></button>
+            <button type="button" class="collapsible"><strong>Jsou to reálné výroky pana Babiše? Jste dezinformační stránka?</strong></button>
             <div class="collapsible-content">
-              <p>Myslíme, že ano. Doufáme, že ne.</p>
+              <p>Ne, toto nejsou reálné výroky pana Babiše. Veškeré jeho odpovědi jsou generovány s pomocí umělé inteligence od OpenAI. </p>
+              <p>Ne, nejsme dezinformační stránka, nepodáváme reální informace či názory, celý projekt vznikl s cílem pobavit a slouží jenom pro účely zábavy.</p>
             </div> 
 
-            <button type="button" class="collapsible"><strong>Co máte ještě v plánu?</strong></button>
+            <button type="button" class="collapsible"><strong>Mám návrh / dotaz / připomínku / hate komentář. Kam ho můžu napsat?</strong></button>
             <div class="collapsible-content">
-              <p>V plánu jsou další hry, případně jiné záležitosti s tématikou gymnázia a špetkou (nebo spíš kamionem) humoru.</p>
-            </div> 
-
-            <button type="button" class="collapsible"><strong>Kdo je LZ?</strong></button>
-            <div class="collapsible-content">
-              <p>LZ jsou iniciály jména Ludmila Zemanová. Takto se jmenuje naše umělá inteligence, která vás učí zeměpis na <a href="/ucitel_zemepisu">této stránce</a>. Jakákoliv podobnost s reálnými osobami je čistě náhodná.</p>
+              <p>Nejjednodušší bude na e-mail <strong>info@betabis.cc</strong>, nebo na GitHub v otázce výše (Jak to celé funguje?).</p>
             </div> 
         </div>
         <div class="column right"></div>
