banner + text update

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,8 @@
         </div>
         <div class="column middle">
             <h2>Za Babiše bylo líp!</h2>
-            <p>Pavel je provládní kandidát. Nebyl jsem v StB. Pavel chce válku. Já pomáhám lidu. Jsem nezávislý kandidát. Pan Babiš toho říká spoustu a je těžké se v tom vyznat. Naštěstí se ho zde můžete na cokoliv zeptat.</p>
+            <p>Pavel je provládní kandidát. Nebyl jsem v StB. Pavel chce válku. Já pomáhám lidu. Jsem nezávislý kandidát. </p>
+            <p>Pan Babiš toho říká spoustu a je těžké se v tom vyznat. Naštěstí se ho zde můžete na cokoliv zeptat.</p>
 
             <div class="custom-select" style="width:300px;">
                 <select id="select-value">
